{
    "name": "InputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "9582ee63-06aa-4f41-a405-177f58f1159e",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Button",
                    "id": "6fd2b519-7a94-473a-9cb8-859d0183ea31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Button",
                    "id": "17dfcd3f-5615-4484-9761-be81cd4a3642",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "236c42f0-5a2b-493b-9ab2-6fc28a067395",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FocusOnCastle",
                    "type": "Button",
                    "id": "ee5adf58-d96d-4577-9ff0-e810d465cbfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FocusOnSelected",
                    "type": "Button",
                    "id": "b27307f3-4309-48b8-ab17-9ffe55c5677e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4587174c-e96d-40ff-8fa0-c5bc8878608c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef272824-c2d4-4f0d-a592-17c434475720",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6996a5f3-3fb0-4a0c-8415-1de981b668f4",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9796c0da-1bb7-4c1f-a8cf-48912bfeba2b",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnCastle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e1bd272-39ec-4ab3-b164-269afec0c7b8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnSelected",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Globals",
            "id": "920c043d-8725-4093-a8a8-c7be3288145f",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "d79aab93-93ee-4984-9d41-d306f16622dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4df28123-0089-4ac4-94e2-190485e21494",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Units",
            "id": "4302afca-313d-4e6e-bcc1-c84782033b72",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "b7e61cbc-6789-4201-a389-0d59178e6a74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c6744168-56eb-4aca-96f0-7eceb88fffa5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81c4e350-c7d8-4f20-ab9c-b6bb1c58a6a5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "102508e4-666a-42bf-8f3f-1d8733c15852",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}